[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylove2d"
version = "0.1.0"
description = "A LÖVE2D-style 2D game framework for Python built on pygame"
authors = [{name = "nnei"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pygame>=2.5"]
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

